--- a/src/app.scss
+++ b/src/app.scss
@@ -2,6 +2,10 @@ p {
     font-weight: bold;
 }
 
+#network-configuration {
+  padding: var(--pf-global--gutter);
+}
+
 /**
  *  Place details definition list into a grid, with PF4-like style
  *
