Add a generic component for displaying modal forms

--- a/src/app.scss
+++ b/src/app.scss
@@ -6,6 +6,10 @@ p {
   padding: var(--pf-global--gutter);
 }
 
+.modal-form-caption {
+  margin-bottom: var(--pf-global--spacer--sm);
+}
+
 /**
  *  Place details definition list into a grid, with PF4-like style
  *
