--- a/src/app.scss
+++ b/src/app.scss
@@ -83,6 +83,16 @@ p {
     }
 }
 
+.network {
+    .pf-c-tab-content {
+        padding-top: var(--pf-global--spacer--md);
+    }
+
+    .pf-c-card {
+        margin-bottom: var(--pf-global--spacer--md);
+    }
+}
+
 .interfaces-list {
     .pf-c-table__toggle .pf-c-button {
         padding-left: var(--pf-global--spacer--xs);
