--- a/src/app.scss
+++ b/src/app.scss
@@ -86,17 +86,15 @@ p {
 .network {
     /** Make tabs looks like a navigation component */
     .pf-c-tabs {
-        margin:
-           calc(var(--pf-c-page__main-section--PaddingTop) * -1)
+        margin: calc(var(--pf-c-page__main-section--PaddingTop) * -1)
            calc(var(--pf-c-page__main-section--PaddingRight) * -1)
            var(--pf-c-page__main-section--PaddingTop)
            calc(var(--pf-c-page__main-section--PaddingLeft) * -1);
-        padding:
-           var(--pf-c-page__main-section--PaddingTop)
+        padding: var(--pf-c-page__main-section--PaddingTop)
            var(--pf-c-page__main-section--PaddingRight)
            var(--pf-c-page__main-section--PaddingBottom)
            var(--pf-c-page__main-section--PaddingLeft);
-         background: var(	--pf-global--Color--light-100);
+        background: var(--pf-global--Color--light-100);
     }
 
     .pf-c-card {
