Do not use a dropdown for actions

--- a/src/app.scss
+++ b/src/app.scss
@@ -144,15 +144,15 @@ p {
     }
 }
 
-.pf-c-dropdown__menu-item.dangerous-action {
-  button.pf-m-link {
-    color: var(--pf-global--danger-color--200);
-  }
+.pf-c-switch.interface-status-switcher {
+   --pf-c-switch--FontSize: var(--pf-global--FontSize--sm);
+   vertical-align: text-bottom;
+}
+
+.pf-c-button.pf-m-link.delete-action {
+  color: var(--pf-global--Color--200);
 
   &:hover {
-    background-color: var(--pf-global--danger-color--200);
-    button.pf-m-link {
-      color: white;
-    }
+    color: var(--pf-global--danger-color--200);
   }
 }
